--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1684,107 +1684,107 @@ stories:
   domain: http://www.dentonrc.com/
   link: https://dentonrc.com/opinion/editorials/why-is-lowering-drug-costs-a-partisan-issue/article_c3ffb780-5b8d-532d-888e-909258aad7c4.html
 images:
-- name: aws-s3-stories-capital-battle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-internet-numbers.jpg
-- name: bf-skinner-old-gas-station_36588462091_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_36588462091_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
-- name: adam-smith-adam-smith-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
-- name: blossombar-creativity-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
-- name: fence-mexico-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kand-two.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: nazi-invasion-city-skyline-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-skyline-bright.jpg
-- name: amusement-park-amusement-park-2-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-- name: desert-dragon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-purp-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-- name: san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-- name: christianity-christianity-under-construction-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-graham-sutherland.jpg
-- name: la-muse-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-container-several-colors-grey.jpg
-- name: oldtrain-oldtrain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-smoking-cigarette.jpg
-- name: oldhouse-granaryfield-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
-- name: containership-containership-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-dresden.jpg
-- name: mistywoods-babyfoot-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-soul.jpg
-- name: amusement-park-amusement-park-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alberto-giacometti.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-granite.jpg
-- name: aws-s3-stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtheline-dali-three.jpg
-- name: sand-hand-sand-hand-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-4.jpg
-- name: ellis-island-ellisisland-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-asteroids.jpg
-- name: blossombar-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-00-00.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-- name: copper-circuit-yellow-roses-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-yellow-roses-garden.jpg
-- name: art-museum-art-museum-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-rainbow-festival.jpg
-- name: birdhouse-birdhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-diego-rivera1.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: locked-up-steam-lock-up-steam-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-dali.jpg
+- name: legal-statue-legalstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
+- name: copper-circuit-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-capital-cannon.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
+- name: legal-statue-legalstatue-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-umberto-bocc.jpg
+- name: christianity-christianity-under-construction-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
+- name: machine-road-machine-road-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit-2.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
+- name: aws-s3-stories-yuma-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yuma-downtown.jpg
+- name: oldtrain-oldtrain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-clean-view.jpg
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: bf-skinner-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-miami-beach-tower-city.jpg
+- name: downtown-los-angeles-downtown-la-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-post-modern.JPG
+- name: old-granary-field-oldhouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-satan-red.jpg
 - name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-cinnamon-rolls.JPG
-- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-- name: bf-skinner-piano-in-street-good.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-piano-in-street-good.jpg
-- name: meadowbutterfly-meadow-butterfly-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colorful-blocks.jpg
-- name: copper-circuit-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-shipping-people-walking.jpg
-- name: razorwire-DSC-0080-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-gan-vogh.jpg
-- name: aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-- name: rain-princess-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-crossing-through-fence-2.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: death-valley-death-valley-national-park-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-graham-sutherland.jpg
+- name: birdhouse-birdhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-pond.jpg
+- name: gypsy-wagon-gypsywagon-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purp-paper.jpg
+- name: bf-skinner-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-palace-water-fountain.jpg
 - name: stalin-time-working-waterfront-2.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-waterfront-2.jpg
-- name: old-school-house-old-schoolhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-creativity.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-- name: stalin-time-oxoford-circus-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-oxoford-circus-station.jpg
-- name: stalin-time-old-ship-waterfront-harbor.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-ship-waterfront-harbor.jpg
-- name: stalin-time-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cross-against-trees.jpg
+- name: blossombar-purple-storm-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-50-62.jpg
+- name: server-cloud-server-racks-clouds-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-ww2-color.jpg
+- name: christianity-christianity-under-construction-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-internet-numbers.jpg
+- name: downtheline-downtheline-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-umberto-bocc.jpg
+- name: eduardo-eduardo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-neo-instinct.jpg
+- name: blossombar-blossombar-still-600.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still-600.png
+- name: mediterranean-mediterranean-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-graham-sutherland.jpg
+- name: ellis-island-ellisisland-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-collage.jpg
+- name: fence-mexico-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-satan-red.jpg
+- name: braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+- name: blossombar-purp-paper-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
+- name: stalin-time-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-docs-cranes-waterfront.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-granite.jpg
+- name: border-fence-border-fence-on-hill-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
+- name: oldroad-old-road-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crunch-paper.jpg
+- name: beach-rocks-beach-rocks-currents-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-wols.jpg
+- name: bf-skinner-ship-bird-foreground.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-ship-bird-foreground.jpg
+- name: old-gas-pumps-oldgaspumps-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-nazi-poster.jpg
+- name: bluelake-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy-square.jpg
+- name: old-gas-pumps-oldgaspumps-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-spagetti-accident.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: beach-rocks-beach-rocks-currents-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
+- name: oldhotel-oldhotel-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-soul.jpg
+- name: bf-skinner-piano-in-street-good.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-piano-in-street-good.jpg
+- name: castle-wall-DSC-0067-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-yellow-paper.JPG
+- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
+- name: rain-princess-DSC_0017.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
 ---
 Sales Team Realtors Gives Back With Annual Toy Giveaway.&nbsp;Caroling In Shain Park.&nbsp;Hounds Tame Cedar Shoals To Advance To Quarterfinals.&nbsp;Harvey Family Tradition Continues.&nbsp;Times Square Characters Head To Rock Center For The Holidays.&nbsp;Banksy Recreates The Nativity In Bethlehem.&nbsp;Chanukah Celebration Set For Sunday.&nbsp;Lake Havasu City Baseball Coach Dies After Suffering Heart Attack.&nbsp;
